Added validations